feat: suite et fin site

--- a/index.html
+++ b/index.html
@@ -17,14 +17,16 @@
     <meta property="og:url" content="https://christele-guignand.fr/">
     <meta property="og:title" content="Christèle Guignand | Maquillage Permanent à Saint-Etienne">
     <meta property="og:description" content="Experte en maquillage permanent depuis 2004. Révélez votre beauté naturelle avec 21 ans d'expertise en dermopigmentation.">
-    <meta property="og:image" content="assets/img/hero-banner.webp">
+    <meta property="og:image" content="https://christele-guignand.fr/assets/img/hero-banner.webp">
+    <meta property="og:image:width" content="1200">
+    <meta property="og:image:height" content="630">
 
     <!-- Twitter -->
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:url" content="https://christele-guignand.fr/">
     <meta name="twitter:title" content="Christèle Guignand | Maquillage Permanent à Saint-Etienne">
     <meta name="twitter:description" content="Experte en maquillage permanent depuis 2004. Révélez votre beauté naturelle avec 21 ans d'expertise en dermopigmentation.">
-    <meta name="twitter:image" content="assets/img/hero-banner.webp">
+    <meta name="twitter:image" content="https://christele-guignand.fr/assets/img/hero-banner.webp">
 
     <!-- Preconnect to external resources -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -35,7 +37,9 @@
     <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500&family=Montserrat:wght@300;400;500;600&display=swap" rel="stylesheet">
 
     <!-- Favicon -->
+    <link rel="icon" type="image/svg+xml" href="favicon.svg">
     <link rel="icon" type="image/x-icon" href="favicon.ico">
+    <meta name="theme-color" content="#E8B4B8">
 
     <!-- Critical CSS inline -->
     <style>
