--- a/index.html
+++ b/index.html
@@ -14,19 +14,19 @@
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://christele-guignand.fr/">
+    <meta property="og:url" content="https://www.christele-guignand-maquillage-permanent.fr/">
     <meta property="og:title" content="Christèle Guignand | Maquillage Permanent à Saint-Etienne">
     <meta property="og:description" content="Experte en maquillage permanent depuis 2004. Révélez votre beauté naturelle avec 21 ans d'expertise en dermopigmentation.">
-    <meta property="og:image" content="https://christele-guignand.fr/assets/img/hero-banner.webp">
+    <meta property="og:image" content="https://www.christele-guignand-maquillage-permanent.fr/assets/img/og-image.jpg">
     <meta property="og:image:width" content="1200">
-    <meta property="og:image:height" content="630">
+    <meta property="og:image:height" content="800">
 
     <!-- Twitter -->
     <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:url" content="https://christele-guignand.fr/">
+    <meta name="twitter:url" content="https://www.christele-guignand-maquillage-permanent.fr/">
     <meta name="twitter:title" content="Christèle Guignand | Maquillage Permanent à Saint-Etienne">
     <meta name="twitter:description" content="Experte en maquillage permanent depuis 2004. Révélez votre beauté naturelle avec 21 ans d'expertise en dermopigmentation.">
-    <meta name="twitter:image" content="https://christele-guignand.fr/assets/img/hero-banner.webp">
+    <meta name="twitter:image" content="https://www.christele-guignand-maquillage-permanent.fr/assets/img/og-image.jpg">
 
     <!-- Preconnect to external resources -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -59,7 +59,7 @@
         "@type": "BeautySalon",
         "name": "Christèle Guignand - Maquillage Permanent",
         "description": "Experte en maquillage permanent (dermopigmentation) depuis 2004 à Saint-Etienne. Spécialiste sourcils, lèvres, eye-liner et aréoles mammaires.",
-        "url": "https://christele-guignand.fr",
+        "url": "https://www.christele-guignand-maquillage-permanent.fr",
         "telephone": "+33668290648",
         "email": "guignand.christele@gmail.com",
         "address": {
@@ -69,7 +69,7 @@
         },
         "foundingDate": "2004",
         "priceRange": "€€",
-        "image": "assets/img/hero-banner.webp",
+        "image": "https://www.christele-guignand-maquillage-permanent.fr/assets/img/og-image.jpg",
         "hasOfferCatalog": {
             "@type": "OfferCatalog",
             "name": "Services de Maquillage Permanent",
