--- a/index.html
+++ b/index.html
@@ -523,13 +523,12 @@
                         <p class="tarif-price">70€</p>
                     </div>
 
-                    <div class="tarif-item tarif-item--special">
+                    <div class="tarif-item">
                         <div class="tarif-info">
                             <h3 class="tarif-name">Aréoles mammaires</h3>
                             <p class="tarif-description">Reconstruction post-mastectomie</p>
                         </div>
-                        <p class="tarif-price tarif-price--devis">Sur devis</p>
-                        <p class="tarif-note">Consultation personnalisée offerte</p>
+                        <p class="tarif-price">Devis</p>
                     </div>
                 </div>
             </div>
